9 May 2006: Wouter
	- Fix for finding bad zone when populating SOA info on start.
	 it would find a parent zone instead of the zone in question (
	 which is empty).
	- request-xfr: AXFR 10.0.0.153 keytouse syntax to interoperate
	  with NSD machines. Will only send AXFR queries to the machine.

8 May 2006: Wouter
	- updated zparser.y to handle empty nsec_seq lists.
	  for empty nonterminals in NSEC3.
	- nicer without ambiguous grammer.

5 May 2006: Wouter
	- nsd-notify handles option -y key:secret to TSIG sign outgoing
	  queries.
	- the acl checks now verify TSIG signatures on the query.
	- iterated_hash compiles with ssl disabled.
	- new ipc NSD_ZONE_STATE sent by xfrd to nsd process. notifies
	  nsd of the state (ok or expired) of a zone.
	- reload process waits for the old server_main to exit to make
	  sure there is no race condition listening to the NSD_ZONE_STATE
	  messages generated when reload sends SOA_INFO to xfrd.
	- server_main and children all set zone_ok state in config options.
	  also server_main so that newly forked children get the right state.
	- if a secondary zone is expired, NSD returns SERVFAIL.
	  a transient error, so resolvers try again later.
	- SOA_END ipc message, sent by reload to xfrd, so it can repeat
	  all zone states (which can have changed during reload).
	- zone_is_ok kept in config section so that state for zones
	  without data is not lost. Those have no zone_type*.
	- secondary zones start in the expired state.
	- if expired zones are updated, then NSD gets the go ahead from
	  xfrd after reload sends SOAINFO/SOAEND msg, so it is really
	  updated in nsd memory.
	- fixed tpkg xfr_1 to have longer expiry times (from 0 and 3
	  seconds to 2000 and 3000 seconds), so the zone does not expire
	  during the test anymore.

4 May 2006: Wouter
	- when a new lease is acquired xfrd_packet_newlease result is used.
	- if a zone is lost in nsd db, xfrd will update state to match.
	- IXFR can use TSIG in queries and verify responses.